# kotatsu

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  REFACTOR_STATUS.md  pixi.toml  refactor-der.md  xmake.lua
.github/workflows/: check-format.yml  cmake.yml  main.yml  xmake.yml
benchmarks/: CMakeLists.txt  json_benchmark.cpp
cmake/: eventide_dependencies.cmake  kota_dependencies.cmake
examples/: CMakeLists.txt
examples/async_basics/: async_basics.cpp
examples/build_system/: build_system.cpp  compile_graph.h
examples/dump_dot/: dump_dot.cpp
examples/http/: github_avatar_download.cpp  http_showcase.cpp  httpbin_cookie_flow.cpp  openai_responses.cpp  webdav_list.cpp
examples/ipc/: CMakeLists.txt  scripted_roundtrip.cpp  spawn_worker.cpp  stdio_server.cpp
examples/jsonrpc/: CMakeLists.txt  scripted_roundtrip.cpp  spawn_worker.cpp  stdio_server.cpp
include/eventide/async/: async.h  awaitable.h  cancellation.h  error.h  frame.h  fs.h  loop.h  outcome.h  owned.h  process.h  stream.h  sync.h  task.h  udp.h  watcher.h  when.h
include/eventide/common/: config.h  cow_string.h  expected_try.h  functional.h  memory.h  print.h  small_string.h  small_vector.h  type_list.h
include/eventide/deco/: backend.h  decl.h  deco.h  macro.h  runtime.h  trait.h
include/eventide/ipc/: bincode_codec.h  codec.h  json_codec.h  peer.h  peer.inl  protocol.h  recording_transport.h  transport.h
include/eventide/jsonrpc/: peer.h  peer.inl  protocol.h  transport.h
include/eventide/language/: protocol.h  ts.h
include/eventide/reflection/: attrs.h  name.h  struct.h  type_info.h
include/eventide/serde/: annotation.h  attrs.h  content.h  flatbuffers.h  json.h  raw_value.h  serde.h  toml.h  traits.h
include/eventide/zest/: check.h  macro.h  run.h  zest.h
include/kota/async/: async.h
include/kota/codec/: backend.h  bincode.h  codec.h  config.h  content.h  deserialize.h  flatbuffers.h  json.h  spelling.h  toml.h  traits.h
include/kota/http/: http.h
include/kota/ipc/: codec.h  logger.h  peer.h  peer.inl  protocol.h  recording_transport.h  transport.h
include/kota/meta/: annotation.h  attrs.h  binding.inl  compare.h  enum.h  name.h  schema.h  struct.h  type_info.h  type_kind.h
include/kota/support/: comptime.h  config.h  cow_string.h  expected_try.h  fixed_string.h  function_traits.h  functional.h  glob_pattern.h  memory.h  naming.h  ranges.h  small_string.h  small_vector.h  string_match.h  string_ref.h  tuple_traits.h  type_list.h  type_traits.h
include/kota/zest/: macro.h  run.h  snapshot_json.h
scripts/: activate_windows_llvm.bat  lsp_codegen.py
src/: eventide.cpp
src/async/: CMakeLists.txt  acceptor.cpp  awaiter.h  console.cpp  debug.cpp  error.cpp  frame.cpp  fs.cpp  libuv.h  loop.cpp  process.cpp  request.cpp  stream.cpp  sync.cpp  udp.cpp  watcher.cpp
src/async/io/: acceptor.cpp  awaiter.h  console.cpp  directory_watcher.cpp  fs.cpp  fs_event.cpp  loop.cpp  process.cpp  request.cpp  stream.cpp  system.cpp  udp.cpp  watcher.cpp
src/async/runtime/: debug.cpp  frame.cpp  sync.cpp
src/async/vocab/: error.cpp  ringbuffer.cpp  ringbuffer.h
src/codec/: CMakeLists.txt
src/deco/: CMakeLists.txt  runtime.cc  text.cc
src/http/: CMakeLists.txt  bound_client.cpp  client.cpp  execute.cpp  inflight_request.cpp  manager.cpp  request.cpp  util.cpp
src/ipc/: CMakeLists.txt  bincode_codec.cpp  json_codec.cpp  peer.cpp  recording_transport.cpp  transport.cpp
src/ipc/codec/: CMakeLists.txt  bincode.cpp  json.cpp
src/ipc/lsp/: CMakeLists.txt  position.cpp  uri.cpp
src/jsonrpc/: CMakeLists.txt  peer.cpp  transport.cpp
src/language/: CMakeLists.txt
src/meta/: CMakeLists.txt
src/option/: CMakeLists.txt  opt_table.cc  option.cc
src/reflection/: CMakeLists.txt
src/serde/: CMakeLists.txt
src/serde/flatbuffers/flex/: deserializer.cpp  serializer.cpp
src/support/: CMakeLists.txt  glob_pattern.cpp
src/zest/: CMakeLists.txt  expr.cpp  runner.cpp  snapshot.cpp  trace.cpp
temp/: msvc-ci-report.md
tests/: CMakeLists.txt  main.cpp
tests/async/: cancellation_tests.cpp  fs_tests.cpp  stream_tests.cpp  task_tests.cpp  udp_tests.cpp  when_tests.cpp  work_request_tests.cpp
tests/common/: cow_string_tests.cpp  functional.cpp  small_vector_tests.cpp
tests/deco/: descriptor.cc  runtime.cc
tests/eventide/: cancellation_tests.cpp  fs_tests.cpp  process_tests.cpp  stream_tests.cpp  sync_tests.cpp  watcher_tests.cpp  when_tests.cpp
tests/fixtures/: zest_runner_fixture.cpp  zest_runner_main.cpp
tests/fixtures/schema/: all.h  behavior_attrs.h  common.h  containers.h  enums.h  golden.h  hints.h  primitives.h  recursive.h  rename.h  schema_attrs.h  tagged.h
tests/integration/: CMakeLists.txt  conftest.py  stub_server.cpp  test_errors.py  test_lifecycle.py  test_notifications.py  test_progress.py  test_requests.py  test_transport.py
tests/ipc/: codec_tests.cpp  peer_cancel_tests.cpp  peer_dispatch_tests.cpp  peer_lifecycle_tests.cpp  peer_test_types.h  peer_tests.cpp  test_transport.h  transport_tests.cpp
tests/jsonrpc/: peer_tests.cpp  transport_tests.cpp
tests/language/: jsonrpc_traits_tests.cpp
tests/option/: option_tests.cpp
tests/schema/: schema_tests.cpp
tests/serde/content/: yyjson_torture_tests.cpp
tests/serde/flatbuffers/: flatbuffers_object_tests.cpp  flatbuffers_schema_tests.cpp  flatbuffers_torture_tests.cpp
tests/serde/json/: dom_tests.cpp  dom_write_tests.cpp  simdjson_attrs_tests.cpp  simdjson_config_tests.cpp  simdjson_tagged_variant_tests.cpp  simdjson_tests.cpp
tests/unit/: main.cpp
tests/unit/async/: build_system_tests.cpp  cancellation_tests.cpp  directory_watcher_tests.cpp  fs_event_dir_tests.cpp  fs_event_fixture.h  fs_event_tests.cpp  fs_tests.cpp  loop_fixture.h  post_tests.cpp  process_tests.cpp  relay_tests.cpp  stream_tests.cpp  sync_tests.cpp  system_tests.cpp  task_tests.cpp  udp_tests.cpp  watcher_tests.cpp  when_tests.cpp  work_request_tests.cpp
tests/unit/codec/: standard_case_suite.h
tests/unit/common/: functional_tests.cpp  small_vector_tests.cpp
tests/unit/deco/: backend.cc  decl.cc  (+5 more)
(+327 files in other folders)
